--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,8 @@
     <a href="/">Home</a>|
     <a href="/post">Post</a>|
     <a href="/create_subject_page">Create Subject</a>|
-    <a href="/donate">Donate</a>
+    <a href="/donate">Donate</a>|
+    <a href="/manage">Manage</a>
 </nav>
 <div id="content">{% block content %}{% endblock %}</div>
 
