--- a/templates/post.html
+++ b/templates/post.html
@@ -14,6 +14,7 @@
             Subject:<input type="text" name="subject" required><br/>
             File upload:<br/>
            <input type="file" accept="application/pdf" name="pdf" required><br/>
+           (notice: file size should less than 20MB.)
        </form>
  </div>
     <input type="text" id="code" disabled>
