change some css of homepage and fix a bug(when administrator try to delete an article which doesn't exist, there will be a 505 error before)

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}{% endblock %} - My Webpage</title>
     {% endblock %}
     <style>
+        {% block style %}{% endblock %}
         body{
             background-color: #D3E7E9;
         }
