--- a/templates/subject.html
+++ b/templates/subject.html
@@ -12,7 +12,7 @@
             <p>Abstract:{{ article.abstract }}</p>
             <p>Highlight Part:{{ article.highlight_part }}</p>
             <p>Post Time:{{ article.postTime }}</p>
-            <p>Access:{{ article.accessNum }} Upvpte:{{ article.upvoteNum }} Downvote:{{ article.downvoteNum }}</p>
+            <p>Access:{{ article.accessNum }} Upvote:{{ article.upvoteNum }} Downvote:{{ article.downvoteNum }}</p>
         {% endfor %}
 </div>
 <div class="articles">
